--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block extra_css %}
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 {% endblock %}
 
 {% block content %}
