--- a/templates/show_books.html
+++ b/templates/show_books.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/show_books.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/show_books.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -20,15 +20,18 @@
                     <h5 class="card-title">{{ book[1] }}</h5>
 
                     {% if book[2] %}
-                        <p class="card-text text-muted">Автор: {{ book[2] }}</p>
+                    <p class="card-text text-muted">Автор: {{ book[2] }}</p>
                     {% endif %}
 
                     {% if book[3] %}
-                        <p class="card-text">{{ book[3][:150] }}{% if book[3]|length > 150 %}...{% endif %}</p>
+                    <p class="card-text">{{ book[3][:150] }}{% if book[3]|length > 150 %}...{% endif %}</p>
                     {% endif %}
 
                     <span class="badge bg-primary badge-genre mt-auto">{{ genre }}</span>
+
                 </div>
+                <a href="{{ url_for('book_detail', book_id=book[4]) }}" class="btn btn-primary w-100 mt-auto shadow-sm"><i
+                        class="bi bi-info-circle me-1"></i> Подробнее</a>
             </div>
         </div>
         {% endfor %}
