--- a/static/css/show_books.css
+++ b/static/css/show_books.css
@@ -1,9 +1,23 @@
 
-    .row {
-      column-gap: 20px;
-    }
+  .row {
+    column-gap: 20px;
+  }
+  .btn_newbooks {
+    background-color: #4682B4;
+    border-radius: 4px;
+    border: 10px;
+    color: white;
+    padding: 30px 48px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px 20px;
+    cursor: pointer;
+
+  }
   .card {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     transition: transform 0.3s;
   }
   .card:hover {
