--- a/templates/base.html
+++ b/templates/base.html
@@ -14,31 +14,34 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid d-flex justify-content-between">
-    <a class="navbar-brand" href="/">KinoMOOD</a>
+        <div class="container-fluid d-flex justify-content-between">
+            <a class="navbar-brand" href="/">KinoMOOD</a>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Главная</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Ссылка</a>
-        </li>
-      </ul>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Ссылка</a>
+                    </li>
+                </ul>
 
-      <form class="d-flex mr-3">
-        <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Искать</button>
-      </form>
-
-      <div class="d-flex">
-        <a class="btn btn-primary mr-2" href="/register">Регистрация</a>
-        <a class="btn btn-success" href="/login">Войти</a>
-      </div>
-    </div>
-  </div>
-</nav>
+                <form class="d-flex mr-3">
+                    <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Искать</button>
+                </form>
+                <div class="d-flex">
+                    {% if current_user.is_authenticated %}
+                    <a class="navbar-brand" href="/logout">{{ current_user.username }}</a>
+                    {% else %}
+                    <a class="btn btn-primary mr-2" href="/register">Регистрация</a>
+                    <a class="btn btn-success" href="/login">Войти</a>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </nav>
 </header>
 <!-- Begin page content -->
 <main role="main" class="container">
