--- a/templates/show_books.html
+++ b/templates/show_books.html
@@ -2,6 +2,7 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/show_books.css') }}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 {% endblock %}
 
 {% block content %}
@@ -31,6 +32,15 @@
                 </div>
                 <a href="{{ url_for('book_detail', book_id=book[4]) }}" class="btn btn-primary w-100 mt-auto shadow-sm"><i
                         class="bi bi-info-circle me-1"></i> Подробнее</a>
+                {% if current_user.is_authenticated %}
+                <a>&#x200b;</a>
+                <a href="{{ url_for('book_add_fav', book_id=book[4]) }}"
+                   class="btn btn-primary w-100 mt-auto shadow-sm">
+                    <i class="bi bi-info-circle me-1"></i>
+                    Добавить в избранное
+                    <i class="fa-solid fa-heart"></i>
+                </a>
+                {% endif %}
             </div>
         </div>
         {% endfor %}
