--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     {% block extra_css %}{% endblock %}
     <title>{{title}}</title>
 
@@ -22,9 +23,15 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Главная</a>
                     </li>
+                    {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Ссылка</a>
+                        <a class="nav-link text-primary border border-primary rounded px-3" href="/favourites_books">
+                            <strong><i class="fas fa-heart"></i> Избранное</strong>
+                        </a>
                     </li>
+
+                    {% endif %}
+
                 </ul>
 
                 <form class="d-flex mr-3">
