--- a/templates/show_books.html
+++ b/templates/show_books.html
@@ -33,12 +33,13 @@
                         class="bi bi-info-circle me-1"></i> Подробнее</a>
                 {% if current_user.is_authenticated %}
                 <a>&#x200b;</a>
-                <a href="{{ url_for('book_add_fav', book_id=book[4]) }}"
-                   class="btn btn-primary w-100 mt-auto shadow-sm">
-                    <i class="bi bi-info-circle me-1"></i>
-                    Добавить в избранное
-                    <i class="fa-solid fa-heart"></i>
-                </a>
+                <form method="post">
+                    <button type="submit" name="book_id" value="{{ book[4] }}" class="btn btn-primary w-100 shadow-sm">
+                        <i class="bi bi-info-circle me-1"></i>
+                        Добавить в избранное
+                        <i class="fa-solid fa-heart"></i>
+                    </button>
+                </form>
                 {% endif %}
             </div>
         </div>
@@ -47,5 +48,6 @@
             Найти еще книги
         </button>
     </div>
+    {{message}}
 </div>
 {% endblock %}
