--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block extra_css %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 {% endblock %}
 
 {% block content %}
