--- a/templates/show_books.html
+++ b/templates/show_books.html
@@ -49,6 +49,9 @@
             </div>
         </div>
         {% endfor %}
+        <button class="btn_newbooks" onclick="history.go(0)">
+            Найти еще книги
+        </button>
     </div>
     {% else %}
     <p class="text-center text-muted">Ничего не найдено по вашему запросу.</p>
