Доделал отображение оценок(осталось впихнуть кнопку в подробности)

--- a/templates/favourites_books.html
+++ b/templates/favourites_books.html
@@ -24,6 +24,7 @@
                     <img src="{{ book['poster_url'] }}" alt="{{ book['title'] }}" class="book-img">
                     <div class="book-info">
                         <h5>{{ book['title'] }}</h5>
+                        <p class="card-text"> <i class="fa-solid fa-star"></i>{{ book['overview'] }}</p>
                         <p class="text-muted">Автор: {{ book['author'] }}</p>
                         <p class="book-description">{{ book['short_description'] }}</p>
                     </div>
