--- a/templates/search_by_title.html
+++ b/templates/search_by_title.html
@@ -23,7 +23,7 @@
 
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">{{ book[1] }}</h5>
-
+                    <p class="card-text"><i class="fa-solid fa-star"></i>{{ book[6] }}</p>
                     {% if book[2] %}
                     <p class="card-text"><strong>Автор:</strong> {{ book[2] }}</p>
                     {% endif %}
