--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                 </form>
                 <div class="d-flex">
                     {% if current_user.is_authenticated %}
-                    <a class="navbar-brand" href="/logout">{{ current_user.username }}</a>
+                    <a class="navbar-brand" href="/profile">{{ current_user.username }}</a>
                     {% else %}
                     <a class="btn btn-primary mr-2" href="/register">Регистрация</a>
                     <a class="btn btn-success" href="/login">Войти</a>
