чучуть поменял цвета карточек на главной странице и добавил оставшиеся смайлики(прошлые у меня не отображались)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -83,7 +83,7 @@ h2 {
 }
 
 .mood-card input[type="radio"]:checked + label .card-body {
-    background-color: #28a745;
+    background-color: #ceedd0
     color: #fff;
     border-radius: 15px;
 }
