--- a/templates/main.html
+++ b/templates/main.html
@@ -51,7 +51,7 @@
                         <input type="radio" id="joy" name="mood" value="joy">
                         <label for="joy">
                             <div class="card-body">
-                                <i class="bi bi-smile-fill" style="font-size: 3rem; color: #ffc107;"></i>
+                                <i class="fa-regular fa-face-smile-beam" style="font-size: 3rem; color: #FFD43B;"></i>
                                 <h5 class="card-title mt-3">Радость</h5>
                                 <p class="card-text">Позитив и веселье</p>
                             </div>
@@ -65,7 +65,7 @@
                         <input type="radio" id="sadness" name="mood" value="sadness">
                         <label for="sadness">
                             <div class="card-body">
-                                <i class="bi bi-sad-fill" style="font-size: 3rem; color: #007bff;"></i>
+                                <i class="fa-regular fa-face-sad-tear" style="font-size: 3rem; color: #74C0FC;"></i>
                                 <h5 class="card-title mt-3">Грусть</h5>
                                 <p class="card-text">Тревога и печаль</p>
                             </div>
